--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <p>Visit <a href="https://www.skool.com/loqode">Loqode.com</a> to level-up your Glide skills.</p>
+  <p>This is a simple glide function to convert html to pdf.</p>
   <script src="function.js"></script>
   <script src="driver.js"></script>
 </body>
